--- a/spring-boot-mvc/src/main/resources/templates/index.html
+++ b/spring-boot-mvc/src/main/resources/templates/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap/4.1.0/css/bootstrap.min.css">
 </head>
 <body>
-    <span th:text="'Überschrieben durch Thymeleaf'">Hello World</span>
-
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <strong>Holy guacamole!</strong> You should check in on some of those fields below.
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -16,8 +14,12 @@
         </button>
     </div>
 
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/popper.js/popper.min.js"></script>
-    <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <div class="mt-5 text-center" th:text="'Wenn dieser Text angezeigt wird, wird das Template korrekt von Thymeleaf verarbeitet'">
+        Hello World
+    </div>
+
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/popper.js/1.14.1/popper.min.js"></script>
+    <script src="/webjars/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </body>
 </html>
