Java EE braucht jetzt auch keine exakte Version für die Webjars mehr. Umgesetzt über einen Webfiter

--- a/spring-boot-mvc/src/main/resources/templates/index.html
+++ b/spring-boot-mvc/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="/webjars/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -18,8 +18,8 @@
         Hello World
     </div>
 
-    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-    <script src="/webjars/popper.js/1.14.1/popper.min.js"></script>
-    <script src="/webjars/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/popper.js/popper.min.js"></script>
+    <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
